--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "trade-manager": {
+    "admin-panel": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/trade-manager",
+            "outputPath": "dist/admin-panel",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -57,18 +57,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "trade-manager:build"
+            "browserTarget": "admin-panel:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "trade-manager:build:production"
+              "browserTarget": "admin-panel:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "trade-manager:build"
+            "browserTarget": "admin-panel:build"
           }
         },
         "test": {
@@ -94,16 +94,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "trade-manager:serve"
+            "devServerTarget": "admin-panel:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "trade-manager:serve:production"
+              "devServerTarget": "admin-panel:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "trade-manager"
+  "defaultProject": "admin-panel"
 }
